Change logo to inline-block to fix whole header hit area on mobile

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -68,6 +68,7 @@
   font-weight: 400;
 }
 .custom-logo {
-  max-width: 220px;
+  display: inline-block;
+  max-width: 200px;
   height: auto;
 }
